src/components/Header.css
.header {
  background-image: url("../images/subtle-prism.png");
  background-color: #f5f5f5;
  background-size: cover;
  height: 100vh;
  width: 100%;
  align-items: center;
  justify-content: center;
  display: flex;
  position: relative;
}

.header::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(245, 245, 245, 0.6);
  z-index: 1;
}

.header-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 60vw;
  gap: 2rem;
  position: relative;
  z-index: 2;
  /* margin: 0 auto; */
}

.LinkBar {
  position: fixed;
  left: 0;
  top: 50%;
  transform: translateY(-50%);
  z-index: 1000;
  display: flex;
  align-items: center;
}

.header-container h1 {
  text-transform: uppercase;
  font-size: 4rem;
  text-align: center;
}

.header-container p {
  text-align: center;
  font-size: 1.3rem;
}

@media only screen and (max-width: 768px) {
  .header {
    width: 80vw;
  }

  .header-container {
    width: 80vw;
  }

  .header-container h1 {
    font-size: 3rem;
  }

  .LinkBar {
    position: static;
    transform: none;
    margin-top: 2rem;
    width: 100%;
    display: flex;
    justify-content: center;
  }
}

